--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "jupyter.debugJustMyCode": false
+  "jupyter.debugJustMyCode": false,
+  "python.defaultInterpreterPath": "python/.venv/bin/python",
 }
