--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -34,10 +34,10 @@ jupyter-executor = [
 # autogen-core = { git = "https://github.com/microsoft/autogen.git", subdirectory = "python/packages/autogen-core", rev = "340a8e85872697f1aa524ef900c651eaf427d547" }
 # autogen-agentchat = { git = "https://github.com/microsoft/autogen.git", subdirectory = "python/packages/autogen-agentchat", rev = "340a8e85872697f1aa524ef900c651eaf427d547" }
 
-autogenstudio = { git = "https://github.com/yuval-k/autogen.git", subdirectory = "python/packages/autogen-studio", rev = "1394f5c86e27c28d3cc4a7935faa458e81e49583" }
-autogen-ext = { git = "https://github.com/yuval-k/autogen.git", subdirectory = "python/packages/autogen-ext", rev = "1394f5c86e27c28d3cc4a7935faa458e81e49583" }
-autogen-core = { git = "https://github.com/yuval-k/autogen.git", subdirectory = "python/packages/autogen-core", rev = "1394f5c86e27c28d3cc4a7935faa458e81e49583" }
-autogen-agentchat = { git = "https://github.com/yuval-k/autogen.git", subdirectory = "python/packages/autogen-agentchat", rev = "1394f5c86e27c28d3cc4a7935faa458e81e49583" }
+autogenstudio = { git = "https://github.com/kagent-dev/autogen.git", subdirectory = "python/packages/autogen-studio", rev = "ae6e8848901fb33a7e0f6349c88545a9d53604db" }
+autogen-ext = { git = "https://github.com/kagent-dev/autogen.git", subdirectory = "python/packages/autogen-ext", rev = "ae6e8848901fb33a7e0f6349c88545a9d53604db" }
+autogen-core = { git = "https://github.com/kagent-dev/autogen.git", subdirectory = "python/packages/autogen-core", rev = "ae6e8848901fb33a7e0f6349c88545a9d53604db" }
+autogen-agentchat = { git = "https://github.com/kagent-dev/autogen.git", subdirectory = "python/packages/autogen-agentchat", rev = "ae6e8848901fb33a7e0f6349c88545a9d53604db" }
 
 kagent = { workspace = true }
 
