--- a/go/config/crd/bases/kagent.dev_agents.yaml
+++ b/go/config/crd/bases/kagent.dev_agents.yaml
@@ -19,6 +19,10 @@ spec:
       jsonPath: .status.conditions[0].status
       name: Accepted
       type: string
+    - description: The ModelConfig resource referenced by this agent.
+      jsonPath: .spec.modelConfigRef
+      name: ModelConfig
+      type: string
     name: v1alpha1
     schema:
       openAPIV3Schema:
@@ -46,6 +50,8 @@ spec:
             properties:
               description:
                 type: string
+              modelConfigRef:
+                type: string
               systemMessage:
                 minLength: 1
                 type: string
@@ -64,6 +70,8 @@ spec:
                   type: object
                 maxItems: 20
                 type: array
+            required:
+            - modelConfigRef
             type: object
           status:
             description: AgentStatus defines the observed state of Agent.
