--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
   "autogen-core>=0.4.3",
-  "autogen-ext[anthropic,mcp]>=0.4.3",
+  "autogen-ext[anthropic,azure,mcp,openai]>=0.4.3",
   "autogen-agentchat>=0.4.3",
   "autogenstudio>=0.4.3",
   "openai==1.60.0",
