--- a/go/config/crd/bases/kagent.dev_modelconfigs.yaml
+++ b/go/config/crd/bases/kagent.dev_modelconfigs.yaml
@@ -46,105 +46,106 @@ spec:
           spec:
             description: ModelConfigSpec defines the desired state of ModelConfig.
             properties:
+              anthropicC:
+                description: Anthropic-specific configuration
+                properties:
+                  baseUrl:
+                    description: Base URL for the Anthropic API (overrides default)
+                    type: string
+                  maxTokens:
+                    description: Maximum tokens to generate
+                    type: integer
+                  temperature:
+                    description: Temperature for sampling
+                    type: string
+                  topK:
+                    description: Top-k sampling parameter
+                    type: integer
+                  topP:
+                    description: Top-p sampling parameter
+                    type: string
+                type: object
               apiKeySecretKey:
                 type: string
               apiKeySecretName:
                 type: string
+              azureOpenAI:
+                description: Azure OpenAI-specific configuration
+                properties:
+                  apiVersion:
+                    description: API version for the Azure OpenAI API
+                    type: string
+                  azureAdToken:
+                    description: Azure AD token for authentication
+                    type: string
+                  azureDeployment:
+                    description: Deployment name for the Azure OpenAI API
+                    type: string
+                  azureEndpoint:
+                    description: Endpoint for the Azure OpenAI API
+                    type: string
+                  maxTokens:
+                    description: Maximum tokens to generate
+                    type: integer
+                  temperature:
+                    description: Temperature for sampling
+                    type: string
+                  topP:
+                    description: Top-p sampling parameter
+                    type: string
+                required:
+                - apiVersion
+                - azureEndpoint
+                type: object
               model:
                 type: string
+              openAI:
+                description: OpenAI-specific configuration
+                properties:
+                  baseUrl:
+                    description: Base URL for the OpenAI API (overrides default)
+                    type: string
+                  frequencyPenalty:
+                    description: Frequency penalty
+                    type: string
+                  maxTokens:
+                    description: Maximum tokens to generate
+                    type: integer
+                  "n":
+                    description: N value
+                    type: integer
+                  organization:
+                    description: Organization ID for the OpenAI API
+                    type: string
+                  presencePenalty:
+                    description: Presence penalty
+                    type: string
+                  seed:
+                    description: Seed value
+                    type: integer
+                  temperature:
+                    description: Temperature for sampling
+                    type: string
+                  timeout:
+                    description: Timeout
+                    type: integer
+                  topP:
+                    description: Top-p sampling parameter
+                    type: string
+                type: object
               provider:
+                allOf:
+                - enum:
+                  - Anthropic
+                  - OpenAI
+                  - AzureOpenAI
+                - enum:
+                  - Anthropic
+                  - OpenAI
+                  - AzureOpenAI
                 default: OpenAI
                 description: The provider of the model
-                enum:
-                - Anthropic
-                - OpenAI
-                - AzureOpenAI
                 type: string
-              providerConfig:
-                description: Provider-specific configuration
-                properties:
-                  anthropic:
-                    description: Configuration for Anthropic provider models
-                    properties:
-                      baseUrl:
-                        description: Base URL for the Anthropic API (overrides default)
-                        type: string
-                      maxTokens:
-                        description: Maximum tokens to generate
-                        type: integer
-                      temperature:
-                        description: Temperature for sampling
-                        type: string
-                      topK:
-                        description: Top-k sampling parameter
-                        type: integer
-                      topP:
-                        description: Top-p sampling parameter
-                        type: string
-                    type: object
-                  azureOpenAI:
-                    description: Configuration for Azure OpenAI provider models
-                    properties:
-                      apiVersion:
-                        description: API version for the Azure OpenAI API
-                        type: string
-                      azureAdToken:
-                        description: Azure AD token for authentication
-                        type: string
-                      azureDeployment:
-                        description: Deployment name for the Azure OpenAI API
-                        type: string
-                      azureEndpoint:
-                        description: Endpoint for the Azure OpenAI API
-                        type: string
-                      maxTokens:
-                        description: Maximum tokens to generate
-                        type: integer
-                      temperature:
-                        description: Temperature for sampling
-                        type: string
-                      topP:
-                        description: Top-p sampling parameter
-                        type: string
-                    required:
-                    - apiVersion
-                    - azureEndpoint
-                    type: object
-                  openAI:
-                    description: Configuration for OpenAI provider models
-                    properties:
-                      baseUrl:
-                        description: Base URL for the OpenAI API (overrides default)
-                        type: string
-                      frequencyPenalty:
-                        description: Frequency penalty
-                        type: string
-                      maxTokens:
-                        description: Maximum tokens to generate
-                        type: integer
-                      "n":
-                        description: N value
-                        type: integer
-                      organization:
-                        description: Organization ID for the OpenAI API
-                        type: string
-                      presencePenalty:
-                        description: Presence penalty
-                        type: string
-                      seed:
-                        description: Seed value
-                        type: integer
-                      temperature:
-                        description: Temperature for sampling
-                        type: string
-                      timeout:
-                        description: Timeout
-                        type: integer
-                      topP:
-                        description: Top-p sampling parameter
-                        type: string
-                    type: object
-                type: object
             required:
             - apiKeySecretKey
             - apiKeySecretName
