--- a/go/config/crd/bases/kagent.dev_agents.yaml
+++ b/go/config/crd/bases/kagent.dev_agents.yaml
@@ -49,6 +49,13 @@ spec:
             description: AgentSpec defines the desired state of Agent.
             properties:
               a2aConfig:
+                description: |-
+                  A2AConfig instantiates an A2A server for this agent,
+                  served on the HTTP port of the kagent kubernetes
+                  controller (default 8083).
+                  The A2A server URL will be served at
+                  <kagent-controller-ip>:8083/api/a2a/<agent-namespace>/<agent-name>
+                  Read more about the A2A protocol here: https://github.com/google/A2A
                 properties:
                   skills:
                     items:
