remove the buildarch
Signed-off-by: Peter Jausovec <peter.jausovec@solo.io>

--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,6 +1,6 @@
 ### STAGE 1: base image
 ARG BASE_IMAGE_REGISTRY=cgr.dev
-FROM --platform=linux/$BUILDARCH $BASE_IMAGE_REGISTRY/chainguard/wolfi-base:latest AS base-os
+FROM $BASE_IMAGE_REGISTRY/chainguard/wolfi-base:latest AS base-os
 
 ENV LANG=C.UTF-8
 ENV LC_ALL=C.UTF-8
@@ -31,7 +31,7 @@ RUN --mount=type=cache,target=/cache/bun,rw \
     && bun --version
 
 ### STAGE 2: build + ui
-FROM --platform=linux/$BUILDARCH node-os AS ui-builder
+FROM node-os AS ui-builder
 ARG TARGETARCH
 
 WORKDIR /app/ui
