--- a/.github/data/agent-framework/backup/deployment-env-mismatch.yaml
+++ b/.github/data/agent-framework/backup/deployment-env-mismatch.yaml
@@ -1,13 +1,14 @@
 apiVersion: agent-framework.solo.io/v1alpha1
 kind: Challenge
 metadata:
-  name: deployment-low-resources
+  name: deployment-env-mismatch
 spec:
-  description: Insufficient resources that will cause an OOM kill
+  description: Update MySQL password but not the apps using it
   prompt: |
-    There is a kubernetes cluster running in context 'cluster1'.
+    There is a kubernetes cluster running in context 'kind-kagent'.
     Calling the frontend service at http://frontend-v1:8080 I see an error message telling about issues in the 'backend-v3' service. 
     You can find a mocha file 'test.js' in the directory $(git rev-parse --show-toplevel)/.github/data/agent-framework/scenario1
   steps:
     - run: |
-        kubectl patch deployment mysql-v1 --context ${CLUSTER1} -p '{"spec":{"template":{"spec":{"containers":[{"name":"mysql","resources":{"limits":{"memory":"10Mi"}}}]}}}}'
+        kubectl --context ${CLUSTER_CTX} set env deployment/mysql-v1 MYSQL_ROOT_PASSWORD=mynewpassword
+        kubectl --context ${CLUSTER_CTX} delete pod -l app=mysql,version=v1 --wait=false
