--- a/.github/workflows/run-agent-framework-test.yaml
+++ b/.github/workflows/run-agent-framework-test.yaml
@@ -3,148 +3,107 @@ name: Run PE Test
 on:
   workflow_dispatch:
 env:
-  CLUSTER1: cluster1
+  CLUSTER_CTX: kind-kagent
+  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
 jobs:
   solve-challenge:
     outputs:
       scn1_ch1: ${{ steps.gen_output.outputs.scn1_ch1 }}
-      scn1_ch2: ${{ steps.gen_output.outputs.scn1_ch2 }}
-      scn1_ch3: ${{ steps.gen_output.outputs.scn1_ch3 }}
-      scn1_ch4: ${{ steps.gen_output.outputs.scn1_ch4 }}
-      scn1_ch5: ${{ steps.gen_output.outputs.scn1_ch5 }}
-      scn1_ch6: ${{ steps.gen_output.outputs.scn1_ch6 }}
-      scn1_ch7: ${{ steps.gen_output.outputs.scn1_ch7 }}
-      scn1_ch8: ${{ steps.gen_output.outputs.scn1_ch8 }}
-      scn1_ch9: ${{ steps.gen_output.outputs.scn1_ch9 }}
-      scn1_ch10: ${{ steps.gen_output.outputs.scn1_ch10 }}
-      scn1_ch11: ${{ steps.gen_output.outputs.scn1_ch11 }}
-      scn1_ch12: ${{ steps.gen_output.outputs.scn1_ch12 }}
-      scn1_ch13: ${{ steps.gen_output.outputs.scn1_ch13 }}
-      scn1_ch14: ${{ steps.gen_output.outputs.scn1_ch14 }}
-      scn1_ch15: ${{ steps.gen_output.outputs.scn1_ch15 }}
-      scn1_ch16: ${{ steps.gen_output.outputs.scn1_ch16 }}
-      scn1_ch17: ${{ steps.gen_output.outputs.scn1_ch17 }}
-      scn1_ch18: ${{ steps.gen_output.outputs.scn1_ch18 }}
-      scn1_ch19: ${{ steps.gen_output.outputs.scn1_ch19 }}
-      scn1_ch20: ${{ steps.gen_output.outputs.scn1_ch20 }}
-      scn1_ch21: ${{ steps.gen_output.outputs.scn1_ch21 }}
-      scn1_ch22: ${{ steps.gen_output.outputs.scn1_ch22 }}
-      scn1_ch23: ${{ steps.gen_output.outputs.scn1_ch23 }}
-      scn1_ch24: ${{ steps.gen_output.outputs.scn1_ch24 }}
+      # scn1_ch2: ${{ steps.gen_output.outputs.scn1_ch2 }}
+      # scn1_ch3: ${{ steps.gen_output.outputs.scn1_ch3 }}
+      # scn1_ch4: ${{ steps.gen_output.outputs.scn1_ch4 }}
+      # scn1_ch5: ${{ steps.gen_output.outputs.scn1_ch5 }}
+      # scn1_ch6: ${{ steps.gen_output.outputs.scn1_ch6 }}
+      # scn1_ch7: ${{ steps.gen_output.outputs.scn1_ch7 }}
+      # scn1_ch8: ${{ steps.gen_output.outputs.scn1_ch8 }}
+      # scn1_ch9: ${{ steps.gen_output.outputs.scn1_ch9 }}
+      # scn1_ch10: ${{ steps.gen_output.outputs.scn1_ch10 }}
+      # scn1_ch11: ${{ steps.gen_output.outputs.scn1_ch11 }}
+      # scn1_ch12: ${{ steps.gen_output.outputs.scn1_ch12 }}
+      # scn1_ch13: ${{ steps.gen_output.outputs.scn1_ch13 }}
+      # scn1_ch14: ${{ steps.gen_output.outputs.scn1_ch14 }}
+      # scn1_ch15: ${{ steps.gen_output.outputs.scn1_ch15 }}
+      # scn1_ch16: ${{ steps.gen_output.outputs.scn1_ch16 }}
+      # scn1_ch17: ${{ steps.gen_output.outputs.scn1_ch17 }}
+      # scn1_ch18: ${{ steps.gen_output.outputs.scn1_ch18 }}
+      # scn1_ch19: ${{ steps.gen_output.outputs.scn1_ch19 }}
+      # scn1_ch20: ${{ steps.gen_output.outputs.scn1_ch20 }}
+      # scn1_ch21: ${{ steps.gen_output.outputs.scn1_ch21 }}
+      # scn1_ch22: ${{ steps.gen_output.outputs.scn1_ch22 }}
+      # scn1_ch23: ${{ steps.gen_output.outputs.scn1_ch23 }}
+      # scn1_ch24: ${{ steps.gen_output.outputs.scn1_ch24 }}
     name: ${{ matrix.challenges.scenario }}/${{ matrix.challenges.challenge }}
     strategy:
       fail-fast: false
       matrix:
         challenges:
         - { name: scn1_ch1, scenario: scenario1, challenge: configmap-missing-key.yaml}
-        - { name: scn1_ch2, scenario: scenario1, challenge: configmap-misspelled.yaml}
-        - { name: scn1_ch3, scenario: scenario1, challenge: configmap-readonly.yaml}
-        - { name: scn1_ch4, scenario: scenario1, challenge: deployment-env-mismatch.yaml}
-        - { name: scn1_ch5, scenario: scenario1, challenge: deployment-impossible-pod-affinity.yaml}
-        - { name: scn1_ch6, scenario: scenario1, challenge: deployment-low-resources.yaml}
-        - { name: scn1_ch7, scenario: scenario1, challenge: deployment-pod-affinity-wrong-key.yaml}
-        - { name: scn1_ch8, scenario: scenario1, challenge: deployment-probe-failures.yaml}
-        - { name: scn1_ch9, scenario: scenario1, challenge: deployment-scaled-down.yaml}
-        - { name: scn1_ch10, scenario: scenario1, challenge: network-policy.yaml}
-        - { name: scn1_ch11, scenario: scenario1, challenge: pvc-wrong-accessmode.yaml}
-        - { name: scn1_ch12, scenario: scenario1, challenge: pvc-wrong-storageclass.yaml}
-        - { name: scn1_ch13, scenario: scenario1, challenge: secret-missing.yaml}
-        - { name: scn1_ch14, scenario: scenario1, challenge: secret-not-mounted.yaml}
-        - { name: scn1_ch15, scenario: scenario1, challenge: service-no-endpoint.yaml}
-        - { name: scn1_ch16, scenario: scenario1, challenge: serviceaccount-misspelled.yaml}
-        - { name: scn1_ch17, scenario: scenario1, challenge: serviceaccount-permissions.yaml}
-        - { name: scn1_ch18, scenario: scenario1, challenge: pod-hostport-conflict.yaml}
-        - { name: scn1_ch19, scenario: scenario1, challenge: pod-limit-range-exceeded.yaml}
-        - { name: scn1_ch20, scenario: scenario1, challenge: pod-resource-quota-exceeded.yaml}
-        - { name: scn1_ch21, scenario: scenario1, challenge: service-dns-resolution-fail.yaml}
-        - { name: scn1_ch22, scenario: scenario1, challenge: service-incorrect-port-number.yaml}
-        - { name: scn1_ch23, scenario: scenario1, challenge: missing-service-selector.yaml}
-        - { name: scn1_ch24, scenario: scenario1, challenge: pod-security-context-issue.yaml}
+        # - { name: scn1_ch2, scenario: scenario1, challenge: configmap-misspelled.yaml}
+        # - { name: scn1_ch3, scenario: scenario1, challenge: configmap-readonly.yaml}
+        # - { name: scn1_ch4, scenario: scenario1, challenge: deployment-env-mismatch.yaml}
+        # - { name: scn1_ch5, scenario: scenario1, challenge: deployment-impossible-pod-affinity.yaml}
+        # - { name: scn1_ch6, scenario: scenario1, challenge: deployment-low-resources.yaml}
+        # - { name: scn1_ch7, scenario: scenario1, challenge: deployment-pod-affinity-wrong-key.yaml}
+        # - { name: scn1_ch8, scenario: scenario1, challenge: deployment-probe-failures.yaml}
+        # - { name: scn1_ch9, scenario: scenario1, challenge: deployment-scaled-down.yaml}
+        # - { name: scn1_ch10, scenario: scenario1, challenge: network-policy.yaml}
+        # - { name: scn1_ch11, scenario: scenario1, challenge: pvc-wrong-accessmode.yaml}
+        # - { name: scn1_ch12, scenario: scenario1, challenge: pvc-wrong-storageclass.yaml}
+        # - { name: scn1_ch13, scenario: scenario1, challenge: secret-missing.yaml}
+        # - { name: scn1_ch14, scenario: scenario1, challenge: secret-not-mounted.yaml}
+        # - { name: scn1_ch15, scenario: scenario1, challenge: service-no-endpoint.yaml}
+        # - { name: scn1_ch16, scenario: scenario1, challenge: serviceaccount-misspelled.yaml}
+        # - { name: scn1_ch17, scenario: scenario1, challenge: serviceaccount-permissions.yaml}
+        # - { name: scn1_ch18, scenario: scenario1, challenge: pod-hostport-conflict.yaml}
+        # - { name: scn1_ch19, scenario: scenario1, challenge: pod-limit-range-exceeded.yaml}
+        # - { name: scn1_ch20, scenario: scenario1, challenge: pod-resource-quota-exceeded.yaml}
+        # - { name: scn1_ch21, scenario: scenario1, challenge: service-dns-resolution-fail.yaml}
+        # - { name: scn1_ch22, scenario: scenario1, challenge: service-incorrect-port-number.yaml}
+        # - { name: scn1_ch23, scenario: scenario1, challenge: missing-service-selector.yaml}
+        # - { name: scn1_ch24, scenario: scenario1, challenge: pod-security-context-issue.yaml}
     runs-on: ['ubuntu-24.04-4core-amd64']
 
     steps:
     - uses: actions/checkout@v4
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: 'Build Images'
+      env:
+        DOCKER_BUILD_ARGS: "--push --platform linux/amd64"
+        DOCKER_BUILDER: "docker buildx"
+      run: |
+        bash .github/data/agent-framework/0.setup.sh
 
     - name: Gather challenge information
       working-directory: .github/data/agent-framework/${{ matrix.challenges.scenario }}
       run: |
         cat ${{ matrix.challenges.challenge }} | yq .spec.prompt
 
-    - name: npm dependencies
+    - name: Gather challenge information
       working-directory: .github/data/agent-framework/${{ matrix.challenges.scenario }}
-      continue-on-error: true
-      timeout-minutes: 3
       run: |
-        mkdir -p "/opt/npm-cache"
-        sudo chown -R 1001:1001 "/opt/npm-cache"
-        wget -qO- https://get.pnpm.io/install.sh | env PNPM_VERSION=10.0.0 sh -
-        sudo ln -s $HOME/.local/share/pnpm/pnpm -t /usr/local/sbin
-        npm install mocha -g
-        pnpm install
-        pnpm install chai @jsdevtools/chai-exec
+        cat ${{ matrix.challenges.challenge }} | yq .spec.prompt
 
-    - name: Run challenge
-      working-directory: .github/data/agent-framework/${{ matrix.challenges.scenario }}
-      timeout-minutes: 5
-      run: |
-        kind delete clusters --all || true
-        kubectl config delete-context mgmt || true
-        kubectl config delete-context cluster1 || true
-        cat README.md |./scripts/md-to-bash.sh | bash -x
-        echo "Waiting for pods to be stable..."
-        while kubectl --context ${CLUSTER1} get pods -A | grep ContainerCreating; do sleep 5; done
-        while kubectl --context ${CLUSTER1} get pods -A | grep Terminating; do sleep 5; done
-
-    - name: Test baseline
+    - name: Run test
       working-directory: .github/data/agent-framework/${{ matrix.challenges.scenario }}
       timeout-minutes: 3
-      run: |
-        timeout --signal=INT 3m mocha ./test.js --timeout 10000 --retries 5
-
-    - name: Break environment
-      working-directory: .github/data/agent-framework/${{ matrix.challenges.scenario }}
-      continue-on-error: true
-      timeout-minutes: 3
-      run: |
-        STEPS_COUNT=$(yq '.spec.steps | length' ${{ matrix.challenges.challenge }})
-        for ((i=0; i<$STEPS_COUNT; i++)); do
-          yq ".spec.steps[$i].run" ${{ matrix.challenges.challenge }} | while IFS= read -r cmd; do
-            echo "$cmd" >> ${{ matrix.challenges.challenge }}.$i.sh
-          done
-          sh ${{ matrix.challenges.challenge }}.$i.sh
-        done
-        echo "Waiting for pods to be stable..."
-        while kubectl --context ${CLUSTER1} get pods -A | grep ContainerCreating; do sleep 5; done
-        while kubectl --context ${CLUSTER1} get pods -A | grep Terminating; do sleep 5; done
-        kubectl --context ${CLUSTER1} get pods -A
-
-    - name: Test again after breaking
-      working-directory: .github/data/agent-framework/${{ matrix.challenges.scenario }}
-      continue-on-error: true
-      timeout-minutes: 1
-      run: |
-        mocha ./test.js --timeout 10000 || true
-
-    - name: Fix it with Agent Framework
-      working-directory: .github/data/agent-framework/${{ matrix.challenges.scenario }}
-      timeout-minutes: 5
       env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        CLUSTER_CTX: kind-kagent
       run: |
-        USER_PROMPT=$(cat ${{ matrix.challenges.challenge }} | yq .spec.prompt)
-        echo "User prompt: $USER_PROMPT"
-        ###########################
-        # Call agent framework here
-        ###########################
+        bash "./run.sh"
+        ../run-challenge.sh "${{ matrix.challenges.scenario }}" "${{ matrix.challenges.challenge }}"
 
     - name: Test final state
       working-directory: .github/data/agent-framework/${{ matrix.challenges.scenario }}
       timeout-minutes: 1
+      env:
+        CLUSTER_CTX: kind-kagent
       run: |
-        kubectl --context ${CLUSTER1} get pods -A
-        mocha ./test.js --timeout 10000
+        kubectl --context ${CLUSTER_CTX} get pods -A
+        timeout --signal=INT 3m mocha ./test.js --timeout 10000 --retries 5
 
     - name: Save result
       working-directory: .github/data/agent-framework/${{ matrix.challenges.scenario }}
