--- a/.github/data/agent-framework/resources/model.yaml
+++ b/.github/data/agent-framework/resources/model.yaml
@@ -4,7 +4,9 @@ metadata:
   name: default-model-config
   namespace: kagent
 spec:
-  apiKeySecretKey: OPENAI_API_KEY
-  apiKeySecretRef: kagent-openai
-  model: o4-mini-2025-04-16
+  apiKeySecretKey: GOOGLE_API_KEY
+  apiKeySecretRef: kagent-google
+  model: google/gemini-2.5-pro-preview-05-06
   provider: OpenAI
+  openAI:
+    baseUrl: https://generativelanguage.googleapis.com/v1beta/openai
